# carrier-sales-agent-hr-fdec

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
api/app/: config.py  deps.py  main.py  seed.py
api/app/db/: models.py
api/app/db/migrations/: env.py
api/app/db/migrations/versions/: 0001_initial.py
api/app/middleware/: rate_limit.py
api/app/routers/: calls.py  carriers.py  loads.py  metrics.py  offers.py
api/app/schemas/: calls.py  carriers.py  loads.py  metrics.py  offers.py
api/app/services/: fmcsa.py  negotiation.py
api/tests/: conftest.py  test_call_negotiations.py  test_evaluate_offer.py  test_health.py  test_list_calls.py  test_log_call.py  test_metrics_by_equipment.py  test_metrics_summary.py  test_negotiation.py  test_rate_limit.py  test_search_loads.py  test_verify_carrier.py
dashboard/: .dockerignore  Dockerfile  app.py  client.py  exec_tab.py  geocodes.py  ops.py  report.py  requirements.txt
data/: loads.json
docs/: API.md  ARCHITECTURE.md  DASHBOARD.md  DATA_MODEL.md  DELIVERABLES.md  HAPPYROBOT.md  INFRA.md  NEGOTIATION.md  SECURITY.md  SPEC.md
happyrobot/: README.md  classification.md  extraction-schema.json  system-prompt.md
happyrobot/tools/: evaluate_offer.json  log_call.json  search_loads.json  verify_carrier.json
infra/: .terraform.lock.hcl  README.md  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/alb/: main.tf  outputs.tf  variables.tf
scripts/: bootstrap-tf-state.sh  build-and-push.sh  seed_synthetic_calls.py
(+16 files in other folders)
